Fixed a previous issue that failed to save on VS code with error page text overflowing white box. Trying to fix show more/less on Heroes pages.

--- a/assets/scss/error.scss
+++ b/assets/scss/error.scss
@@ -10,19 +10,14 @@
         padding-top: 120px;
         text-align: center;
         margin: 10px 0; 
-
         h2 { margin-bottom: 10px; }
-        .moreFamiliar {
-            br { display: none;}
-            margin-bottom: 10px;
-        }
-
+        .moreFamiliar { 
+            margin-bottom: 10px; }
         .btn {
             background-color: #000;
             color: #fff;
             &:HOVER { background-color: #d20a11; }
         }
-
         .bgWhite {
             background-color: #fff;
             opacity: .7;
@@ -42,7 +37,6 @@
                 transform: translate(0 -166px);
             }
 
-
             @media screen and (min-width: 992px) { 
                 bottom: 170px;
                 transform: translate(0 -170px);
@@ -52,9 +46,12 @@
         //.errorPage media queries - help push the footer down on tablet portrait, but bring it back on landscape
         @media screen and (min-width: 768px) {
             margin: 80px 0;
+            .moreFamiliar {
+                br { display: none;}
+            }
         }
         @media screen and (min-width: 992px) {
             margin: 10px 0;
         }
-    }   
+    } 
 }
